feat: implemented endpoint to return price change percentage data with pagination
