# src/types/index.ts
@@ -139,6 +139,20 @@ export interface IgetMaxPriceChangePercentageLastYear {
   sort_order?: SORT_ORDER;
   property_type: PropertyType;
 }
+
+export interface IgetPriceChangePercentageData {
+  city: string;
+  area?: string;
+  limit: number;
+  purpose: string;
+  page_size: number;
+  year_count: number;
+  page_number: number;
+  location_ids: string;
+  sort_order?: SORT_ORDER;
+  property_type: PropertyType;
+}
+
 // export interface IProperty {
 //   id: number;
 //   desc: string;
